# My Demos
add_subdirectory(01Triangle)
add_subdirectory(02Texture)
add_subdirectory(03MultiPass)
add_subdirectory(04Compute)
add_subdirectory(05RayTracing)
add_subdirectory(06MeshShader)
add_subdirectory(07VariableRateShading)
add_subdirectory(08ImGui)

add_subdirectory(06-2BetterMeshShader)
add_subdirectory(06-3AmplificationShader)

add_subdirectory(09DispatchIndirect)
add_subdirectory(09-2DispatchIndirect)
add_subdirectory(10DrawIndirect)

add_subdirectory(11MiniPathTracer)

add_subdirectory(12Instancing)
add_subdirectory(13ComputeParticles)
